--- a/Projects/Calculator/index.html
+++ b/Projects/Calculator/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="main">
-        <div class="inputField">
+    <div id="calculator">        
             <input type="text" name="input" id="input">
-        </div><br>
-        <div class="buttons">
+        <div class="buttonsContainer">
             <div class="nums">
                 <button id="clear">C</button>
             </div>
