Added Functionalities to Buttons

--- a/Projects/Calculator/index.html
+++ b/Projects/Calculator/index.html
@@ -14,37 +14,52 @@
                 <button id="clear">C</button>
             </div>
             <div class="nums">
-                <button id="one">1</button>
+                <button id="one" onclick="CalVal+='1';
+                document.querySelector('#input').value=CalVal;">1</button>
             </div>
             <div class="nums">
-                <button id="two">2</button>
+                <button id="two" onclick="CalVal+='2';
+                document.querySelector('#input').value=CalVal;
+                ">2</button>
             </div>
             <div class="nums">
                 <button id="plus">+</button>
             </div>
             <div class="nums">
-                <button id="three">3</button>
+                <button id="three" onclick="CalVal+='3';
+                document.querySelector('#input').value=CalVal;
+                ">3</button>
             </div>
             <div class="nums">
-                <button id="four">4</button>
+                <button id="four" onclick="CalVal+='4';
+                document.querySelector('#input').value=CalVal;
+                ">4</button>
             </div>
             <div class="nums">
                 <button id="sub">-</button>
             </div>
             <div class="nums">
-                <button id="five">5</button>
+                <button id="five" onclick="CalVal+='5';
+                document.querySelector('#input').value=CalVal;
+                ">5</button>
             </div>
             <div class="nums">
-                <button id="six">6</button>
+                <button id="six" onclick="CalVal+='6';
+                document.querySelector('#input').value=CalVal;
+                ">6</button>
             </div>
             <div class="nums">
                 <button id="mult">*</button>
             </div>
             <div class="nums">
-                <button id="seven">7</button>
+                <button id="seven" onclick="CalVal+='7';
+                document.querySelector('#input').value=CalVal;
+                ">7</button>
             </div>
             <div class="nums">
-                <button id="eight">8</button>
+                <button id="eight" onclick="CalVal+='8';
+                document.querySelector('#input').value=CalVal;
+                ">8</button>
             </div>
             <div class="nums">
                 <button id="div">/</button>
@@ -53,15 +68,21 @@
                 <button id="equal">=</button>
             </div>
             <div class="nums">
-                <button id="nine">9</button>
+                <button id="nine" onclick="CalVal+='9';
+                document.querySelector('#input').value=CalVal;
+                ">9</button>
             </div>
             <div class="nums">
-                <button id="zero">0</button>
+                <button id="zero" onclick="CalVal+='0';
+                document.querySelector('#input').value=CalVal;
+                ">0</button>
             </div>
             <div class="nums">
                 <button id="dot">.</button>
             </div>
         </div
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
