--- a/CodeWithHarry/DomManipulation/index.html
+++ b/CodeWithHarry/DomManipulation/index.html
@@ -6,6 +6,14 @@
     <title>Dom Manipulation </title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="box">
+            This is a Box
+        </div>
+        <div class="box">
+            This is a Box 2
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
